// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for SettingOffices renders correctly from memory 1`] = `
<tr>
  <td>
    EPIC Tower
  </td>
  <td />
  <td>
    GMT -1
  </td>
  <td>
    <Apollo(EditOffice)
      id="edit-modal"
      officeId="11"
      officeName="EPIC Tower"
    />
     
    <Apollo(Apollo(DeleteOffice))
      id="delete-modal"
      officeId="11"
      officeName="EPIC Tower"
    />
  </td>
</tr>
`;

exports[`Tests for SettingOffices renders correctly from memory 2`] = `
<tr>
  <td>
    EPIC Tower
  </td>
  <td />
  <td>
    GMT +1
  </td>
  <td>
    <Apollo(EditOffice)
      id="edit-modal"
      officeId="11"
      officeName="EPIC Tower"
    />
     
    <Apollo(Apollo(DeleteOffice))
      id="delete-modal"
      officeId="11"
      officeName="EPIC Tower"
    />
  </td>
</tr>
`;
